Add intro paragraph

--- a/hello-world.html
+++ b/hello-world.html
@@ -1,1 +1,2 @@
 <<h1>Hello, World!</h1>
+<<p>Welcome to my first website! I am about to embark on an exciting of learning how to code.Want to join me?</p>
